syntax = "proto3";

package fileservice;

option go_package = "/api/proto";

service FileService {
    rpc UploadFile(UploadFileRequest) returns (UploadFileResponse);
    rpc DownloadFile(DownloadFileRequest) returns (DownloadFileResponse);
    rpc ListFiles(ListFilesRequest) returns (ListFilesResponse);
}

message UploadFileRequest {
    string file_name = 1;
    bytes data = 2;
}

message UploadFileResponse {
    string id = 1;
}

message DownloadFileRequest {
    string id = 1;
}

message DownloadFileResponse {
    string file_name = 1;
    bytes data = 2;
    int64 created_at = 3;
    int64 updated_at = 4;
}

message ListFilesRequest {
}

message ListFilesResponse {
    repeated FileMetadata files = 1;
}

message FileMetadata {
    string name = 1;
    int64 created_at = 2;
    int64 updated_at = 3;
}
